// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should accept the "style" prop 1`] = `
.emotion-0 {
  padding: 1rem 2rem 2rem 2rem;
  overflow: auto;
  grid-column: 2;
  grid-row: 1;
  color: red;
}

<div>
  <div
    class="emotion-0"
  >
    Body
  </div>
</div>
`;

exports[`should render correctly 1`] = `
.emotion-0 {
  padding: 1rem 2rem 2rem 2rem;
  overflow: auto;
  grid-column: 2;
  grid-row: 1;
}

<div>
  <div
    class="emotion-0"
  >
    Body
  </div>
</div>
`;
